--- a/components/index.html
+++ b/components/index.html
@@ -3,19 +3,36 @@
 <html>
 <head>
   <link rel="stylesheet" type="text/css" href="home.css">
+  <title> Taseen Majid || Software Engineer</title>
+  <style>
+    .center-text {
+      text-align: center;
+    }
+  </style>
 </head>
 <body>
-  <div class="header">
+  <div class="header center-text"> <!-- Added center-text class for center alignment -->
     <!-- Content before waves -->
     <div class="inner-header flex">
       <!-- Just the logo.. Don't mind this -->
-      <svg version="1.1" class="logo" baseProfile="tiny" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 500 500" xml:space="preserve">
-        <path fill="#FFFFFF" stroke="#000000" stroke-width="10" stroke-miterlimit="10" d="M57,283" />
-        <g>
-          <path fill="#fff" d="M250.4,0.8C112.7,0.8,1,112.4,1,250.2c0,137.7,111.7,249.4,249.4,249.4c137.7,0,249.4-111.7,249.4-249.4C499.8,112.4,388.1,0.8,250.4,0.8z M383.8,326.3c-62,0-101.4-14.1-117.6-46.3c-17.1-34.1-2.3-75.4,13.2-104.1c-22.4,3-38.4,9.2-47.8,18.3c-11.2,10.9-13.6,26.7-16.3,45c-3.1,20.8-6.6,44.4-25.3,62.4c-19.8,19.1-51.6,26.9-100.2,24.6l1.8-39.7 c35.9,1.6,59.7-2.9,70.8-13.6c8.9-8.6,11.1-22.9,13.5-39.6c-6.3-42-14.8-99.4,141.4-99.4h41L333,166c-12.6,16-45.4,68.2-31.2,96.2 c9.2,18.3,41.5,25.6,91.2,24.2l1.1,39.8C390.5,326.2,387.1,326.3,383.8,326.3z" />
-        </g>
-      </svg>
-      <h1>Simple CSS Waves</h1>
+      <div class = "myName">
+          <h1> Taseen Majid </h1>
+      </div>
+      <h2> || Software Engineer & Product Manager ||</h2>
+      <p>
+        Java ~ Python ~ C ~ C++ ~ SQL ~ JS ~ HTML ~ CSS
+      </p>
+      <div class = "button-layout">
+        <div class = "resume-button">
+            <a href = "resume.html" class = "button">Resumes</a>
+        </div>
+        <div class = "linkedin-button">
+            <a href = "https://www.linkedin.com/in/taseen-majid/" class = "button" target="_blank">LinkedIn</a>
+        </div>
+        <div class = "GitHub-button">
+            <a href = "https://github.com/ggTazz" class = "button" target="_blank">GitHub</a>
+        </div>
+    </div>
     </div>
     <!-- Waves Container -->
     <div>
@@ -35,9 +52,6 @@
   </div>
   <!-- Header ends -->
   <!-- Content starts -->
-  <div class="content flex">
-    <p>By.Goodkatz | Free to use</p>
-  </div>
   <!-- Content ends -->
 </body>
 </html>
