--- a/components/index.html
+++ b/components/index.html
@@ -24,7 +24,7 @@
       </p>
       <div class = "button-layout">
         <div class = "resume-button">
-            <a href = "resume.html" class = "button">Resumes</a>
+            <a href = "assets/documents/SWE PM Resume TM 11-23.pdf" download = "SWE Resume - Taseen Majid" class = "button">Resume</a>
         </div>
         <div class = "linkedin-button">
             <a href = "https://www.linkedin.com/in/taseen-majid/" class = "button" target="_blank">LinkedIn</a>
